changed the title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header">
           <img src="images/logo.jpg" alt="Ghana flag">
           <br>
-          <h3>Akan Name Generator</h3>
+          <h3>Akan Names</h3>
           <div class="info">
               <p>In many parts of Ghana, and elsewhere in West Africa, a person's name is determined by the day of the week on which she/he was born.
                   <br> Enter your birthday and gender below to read your day name in Ashanti Twi, a dialect of Akan and the most widely spoken language in Ghana:
