--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <br>
           <h3>Akan Names</h3>
           <div class="info">
-              <p>In many parts of Ghana, and elsewhere in West Africa, a person's name is determined by the day of the week on which she/he was born.
+              <p>The Akan people use the Kwa language group's system of timekeeping, which is based on a six-day week , with the seventh day inclusive. In Ashanti homes, Sunday-born males and females are named Kwasi or Kwesi and Akosua respectively, Monday-born are Kwadwo or Kojo, Adjoa or Adwoa,Tuesday-born are Kwabena or Kobi, Abena , Wednesday-born Kwaku or Kweku, Akua , Thursday-born Yaw, Yaa , Friday-born Kofi, Afia or Afua  and Saturday-born Kwame, Ama..
                   <br> Enter your birthday and gender below to read your day name in Ashanti Twi, a dialect of Akan and the most widely spoken language in Ghana:
                   <br> You can also view your name or day of birth from the table below. <br>
               </p>
